--- a/Experiment/Traditional Machine Learning/Supervised Learning/Logistic Regression/Logistic Regression - All Feature.ipynb
+++ b/Experiment/Traditional Machine Learning/Supervised Learning/Logistic Regression/Logistic Regression - All Feature.ipynb
@@ -1058,6 +1058,33 @@
     "        self.positive_likelihood_ratio = self.sensitivity / self.false_positive_rate # Positive Likelihood Ratio\n",
     "        self.negative_likelihood_ratio = self.false_negative_rate / self.specificity # Negative Likelihood Ratio\n",
     "        self.prevalence_threshold = math.sqrt(self.false_positive_rate) / (math.sqrt(self.sensitivity) + \n",
+    "                                                class utils:\n",
+    "    def __init__(self, confusion_matrix, y_true, y_pred):\n",
+    "        \"\"\"\n",
+    "            - confusion_matrix: 2x2 numpy array\n",
+    "            - y_true: array of label\n",
+    "            - y_pred: array of output value calculated by model\n",
+    "            - fold_count: number of folds\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # Initilize all indicator\n",
+    "        self.TP = confusion_matrix[0][0] # true positive\n",
+    "        self.FN = confusion_matrix[1][0] # false negative\n",
+    "        self.FP = confusion_matrix[1][0] # false positive\n",
+    "        self.TN = confusion_matrix[1][1] # true negative\n",
+    "        self.precision = self.TP/(self.FN +  self.TP) # Precision Score - Positive Predictive Value\n",
+    "        self.recall = self.TP / (self.TP + self.FN)\n",
+    "        self.f1_score =  (2 * self.TP) / (2 * self.TP + self.FP + self.FN)\n",
+    "        self.sensitivity = self.TP / (self.TP + self.FN) # True Positive Rate\n",
+    "        self.specificity = self.TN / (self.TN + self.FP) # False Positive Rate\n",
+    "        self.negative_predictive_value = self.TN / (self.TN + self.FN) # Negative Predictive Value\n",
+    "        self.false_negative_rate = self.FN / (self.FN + self.TP) # False Negative Rate\n",
+    "        self.false_positive_rate = self.FP / (self.FP + self.TN) # False Positive Rate\n",
+    "        self.false_discovery_rate = self.FP / (self.FP + self.TP) # False Discovery Rate\n",
+    "        self.false_omission_rate = self.FN / (self.FN + self.TN) # False Ommision Rate\n",
+    "        self.positive_likelihood_ratio = self.sensitivity / self.false_positive_rate # Positive Likelihood Ratio\n",
+    "        self.negative_likelihood_ratio = self.false_negative_rate / self.specificity # Negative Likelihood Ratio\n",
+    "        self.prevalence_threshold = math.sqrt(self.false_positive_rate) / (math.sqrt(self.sensitivity) + \n",
     "                                                                      math.sqrt(self.false_positive_rate)) # Prevalance Threshold\n",
     "        self.threat_score = self.TP / (self.TN + self.FN + self.FP) # Threat Score\n",
     "        self.prevalence = (self.TP + self.FN)/(self.TP + self.FN + self.TN + self.FP) # Prevalance \n",
@@ -1083,34 +1110,34 @@
     "            \"TN\" : self.TN,\n",
     "            \"FN\" : self.FN,\n",
     "            \"FP\" : self.FP,\n",
-    "            \"precision\" : round(self.precision, 2),\n",
-    "            \"recall\" : round(self.recall, 2),\n",
-    "            \"f1_score\" : round(self.f1_score, 2),\n",
-    "            \"sensitivity\" : round(self.sensitivity, 2),\n",
-    "            \"specificity\" : round(self.specificity, 2),\n",
-    "            \"negative_predictive_value\" : round(self.negative_predictive_value, 2),\n",
-    "            \"false_negative_rate\" : round(self.false_negative_rate, 2),\n",
-    "            \"false_positive_rate\" : round(self.false_positive_rate, 2),\n",
-    "            \"false_discovery_rate\" : round(self.false_discovery_rate, 2),\n",
-    "            \"false_omission_rate\" : round(self.false_omission_rate, 2),\n",
-    "            \"Positive_likelihood_ratio\" : round(self.positive_likelihood_ratio, 2),\n",
-    "            \"Negative_likelihood_ratio\" : round(self.negative_likelihood_ratio, 2),\n",
-    "            \"prevalence_threshold\" : round(self.prevalence_threshold, 2),\n",
-    "            \"threat_score\" : round(self.threat_score, 2),\n",
-    "            \"Prevalence\" : round(self.prevalence, 2),\n",
-    "            \"Matthews_correlation_coefficient\" : round(self.matthews_correlation_coefficient, 2),\n",
-    "            \"Fowlkes_Mallows_index\" : round(self.fowlkes_mallows_index, 2),\n",
-    "            \"informedness\" : round(self.informedness, 2),\n",
-    "            \"markedness\" : round(self.markedness, 2),\n",
-    "            \"Diagnostic_odds_ratio\" : round(self.diagnostic_odds_ratio, 2),\n",
-    "            \"accuracy\" : round(self.accuracy, 2),\n",
-    "            \"balanced_accuracy\" : round(self.balanced_accuracy, 2)\n",
+    "            \"precision\" : self.precision,\n",
+    "            \"recall\" : self.recall,\n",
+    "            \"f1_score\" : self.f1_score,\n",
+    "            \"sensitivity\" : self.sensitivity,\n",
+    "            \"specificity\" : self.specificity,\n",
+    "            \"negative_predictive_value\" : self.negative_predictive_value\n",
+    "            \"false_negative_rate\" : self.false_negative_rate,\n",
+    "            \"false_positive_rate\" : self.false_positive_rate,\n",
+    "            \"false_discovery_rate\" : self.false_discovery_rate,\n",
+    "            \"false_omission_rate\" : self.false_omission_rate,\n",
+    "            \"Positive_likelihood_ratio\" : self.positive_likelihood_ratio,\n",
+    "            \"Negative_likelihood_ratio\" : self.negative_likelihood_ratio,\n",
+    "            \"prevalence_threshold\" : self.prevalence_threshold,\n",
+    "            \"threat_score\" : self.threat_score,\n",
+    "            \"Prevalence\" : self.prevalence,\n",
+    "            \"Matthews_correlation_coefficient\" : self.matthews_correlation_coefficient,\n",
+    "            \"Fowlkes_Mallows_index\" : self.fowlkes_mallows_index,\n",
+    "            \"informedness\" : self.informedness,\n",
+    "            \"markedness\" : self.markedness,\n",
+    "            \"Diagnostic_odds_ratio\" : self.diagnostic_odds_ratio,\n",
+    "            \"accuracy\" : self.accuracy,\n",
+    "            \"balanced_accuracy\" : self.balanced_accuracy\n",
     "        }\n",
     "        \n",
     "        self.roc_auc_score = {\n",
-    "            \"Macro\": round(self.roc_auc_macro, 2), \n",
-    "            \"Micro\": round(self.roc_auc_micro, 2),\n",
-    "            \"Weight\": round(self.roc_auc_weighted, 2)\n",
+    "            \"Macro\": self.roc_auc_macro, \n",
+    "            \"Micro\": self.roc_auc_micro,\n",
+    "            \"Weight\": self.roc_auc_weighted\n",
     "        }\n",
     "        \n",
     "        self.sub_dict = {\n",
@@ -4727,42 +4754,6 @@
     "    loaded_dict = pickle.load(f)\n",
     "loaded_dict"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6117dbd5",
-   "metadata": {},
-   "source": [
-    "# Evaluation Result Analyze"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e29fa7a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Number of train case: {}\".format(len(loaded_dict.keys())))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ee3444a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Number of training: {}\".format(len(loaded_dict.keys()) * 5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52e6d84c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -4781,7 +4772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
