--- a/Experiment/Traditional Machine Learning/Supervised Learning/Random Forest/Random Forest - All Feature.ipynb
+++ b/Experiment/Traditional Machine Learning/Supervised Learning/Random Forest/Random Forest - All Feature.ipynb
@@ -57,9 +57,7 @@
     "main_data_dir = \"D:/GitCloneProject/Bitcoin-Transaction-Graph-Elliptic-Data-Set/Data/Elliptic Data Set/elliptic_bitcoin_dataset\"\n",
     "features_data_path = main_data_dir + \"/elliptic_txs_features.csv\"\n",
     "class_data_path = main_data_dir + \"/elliptic_txs_classes.csv\"\n",
-    "egdelist_data_path = main_data_dir + \"/elliptic_txs_edgelist.csv\"\n",
-    "\n",
-    "model_path = \"Model\""
+    "egdelist_data_path = main_data_dir + \"/elliptic_txs_edgelist.csv\""
    ]
   },
   {
@@ -1083,34 +1081,34 @@
     "            \"TN\" : self.TN,\n",
     "            \"FN\" : self.FN,\n",
     "            \"FP\" : self.FP,\n",
-    "            \"precision\" : round(self.precision, 2),\n",
-    "            \"recall\" : round(self.recall, 2),\n",
-    "            \"f1_score\" : round(self.f1_score, 2),\n",
-    "            \"sensitivity\" : round(self.sensitivity, 2),\n",
-    "            \"specificity\" : round(self.specificity, 2),\n",
-    "            \"negative_predictive_value\" : round(self.negative_predictive_value, 2),\n",
-    "            \"false_negative_rate\" : round(self.false_negative_rate, 2),\n",
-    "            \"false_positive_rate\" : round(self.false_positive_rate, 2),\n",
-    "            \"false_discovery_rate\" : round(self.false_discovery_rate, 2),\n",
-    "            \"false_omission_rate\" : round(self.false_omission_rate, 2),\n",
-    "            \"Positive_likelihood_ratio\" : round(self.positive_likelihood_ratio, 2),\n",
-    "            \"Negative_likelihood_ratio\" : round(self.negative_likelihood_ratio, 2),\n",
-    "            \"prevalence_threshold\" : round(self.prevalence_threshold, 2),\n",
-    "            \"threat_score\" : round(self.threat_score, 2),\n",
-    "            \"Prevalence\" : round(self.prevalence, 2),\n",
-    "            \"Matthews_correlation_coefficient\" : round(self.matthews_correlation_coefficient, 2),\n",
-    "            \"Fowlkes_Mallows_index\" : round(self.fowlkes_mallows_index, 2),\n",
-    "            \"informedness\" : round(self.informedness, 2),\n",
-    "            \"markedness\" : round(self.markedness, 2),\n",
-    "            \"Diagnostic_odds_ratio\" : round(self.diagnostic_odds_ratio, 2),\n",
-    "            \"accuracy\" : round(self.accuracy, 2),\n",
-    "            \"balanced_accuracy\" : round(self.balanced_accuracy, 2)\n",
+    "            \"precision\" : self.precision,\n",
+    "            \"recall\" : self.recall,\n",
+    "            \"f1_score\" : self.f1_score,\n",
+    "            \"sensitivity\" : self.sensitivity,\n",
+    "            \"specificity\" : self.specificity,\n",
+    "            \"negative_predictive_value\" : self.negative_predictive_value\n",
+    "            \"false_negative_rate\" : self.false_negative_rate,\n",
+    "            \"false_positive_rate\" : self.false_positive_rate,\n",
+    "            \"false_discovery_rate\" : self.false_discovery_rate,\n",
+    "            \"false_omission_rate\" : self.false_omission_rate,\n",
+    "            \"Positive_likelihood_ratio\" : self.positive_likelihood_ratio,\n",
+    "            \"Negative_likelihood_ratio\" : self.negative_likelihood_ratio,\n",
+    "            \"prevalence_threshold\" : self.prevalence_threshold,\n",
+    "            \"threat_score\" : self.threat_score,\n",
+    "            \"Prevalence\" : self.prevalence,\n",
+    "            \"Matthews_correlation_coefficient\" : self.matthews_correlation_coefficient,\n",
+    "            \"Fowlkes_Mallows_index\" : self.fowlkes_mallows_index,\n",
+    "            \"informedness\" : self.informedness,\n",
+    "            \"markedness\" : self.markedness,\n",
+    "            \"Diagnostic_odds_ratio\" : self.diagnostic_odds_ratio,\n",
+    "            \"accuracy\" : self.accuracy,\n",
+    "            \"balanced_accuracy\" : self.balanced_accuracy\n",
     "        }\n",
     "        \n",
     "        self.roc_auc_score = {\n",
-    "            \"Macro\": round(self.roc_auc_macro, 2), \n",
-    "            \"Micro\": round(self.roc_auc_micro, 2),\n",
-    "            \"Weight\": round(self.roc_auc_weighted, 2)\n",
+    "            \"Macro\": self.roc_auc_macro, \n",
+    "            \"Micro\": self.roc_auc_micro,\n",
+    "            \"Weight\": self.roc_auc_weighted\n",
     "        }\n",
     "        \n",
     "        self.sub_dict = {\n",
@@ -1118,7 +1116,7 @@
     "            \"ROC_AUC_SCORE\" : self.roc_auc_score,\n",
     "            \"Classification Report\" : classification_report(y_true.tolist(), y_pred.tolist(), \n",
     "                                                            labels = [0, 1], # 0 : Licit, 1 : Illicit\n",
-    "                                                            output_dict = False)\n",
+    "                                                            output_dict = True)\n",
     "        }\n",
     "    def get_value(self):\n",
     "        return self.sub_dict\n",
@@ -1191,7 +1189,6 @@
     "                                              class_weight = class_weight, \n",
     "                                              n_jobs = njob)\n",
     "            model_RF.fit(X_train,y_train)\n",
-    "            joblib.dump(model_RF, model_path + \"/{0}_{1}.joblib\".format(train_case, fold_index))\n",
     "            print(\"End: {}\".format(datetime.now().strftime(\"%m/%d/%Y, %H:%M:%S\")))\n",
     "        \n",
     "            # Testing\n",
@@ -1966,13 +1963,7 @@
       "Traning Case: 25\n",
       "\tFold: 0\n",
       "\tTRAIN: [ 9313  9314  9315 ... 46561 46562 46563] \n",
-      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n",
       "\t\tTraining : 0 -- Start: 08/06/2022, 14:40:28 --- End: 08/06/2022, 14:40:29\n",
       "\t\tValidation: 0 -- Start: 08/06/2022, 14:40:29---End: 08/06/2022, 14:40:29\n",
       "\tFold: 1\n",
@@ -3030,54 +3021,6 @@
     "train = Training(5, X, y)\n",
     "history = train.train(path)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5ad3f82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(path, 'rb') as f:\n",
-    "    loaded_dict = pickle.load(f)\n",
-    "loaded_dict"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5d8ea3c",
-   "metadata": {},
-   "source": [
-    "# Evaluation Result Analyze"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b17533cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Number of train case: {}\".format(len(loaded_dict.keys())))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c72419b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Number of training: {}\".format(len(loaded_dict.keys()) * 5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f5e804d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -3096,7 +3039,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
