--- a/Experiment/Traditional Machine Learning/Supervised Learning/Support Vector Machine/Support Vector Machine - Support Classification - All Feature.ipynb
+++ b/Experiment/Traditional Machine Learning/Supervised Learning/Support Vector Machine/Support Vector Machine - Support Classification - All Feature.ipynb
@@ -1974,13 +1974,7 @@
       "Traning Case: 25\n",
       "\tFold: 0\n",
       "\tTRAIN: [ 9313  9314  9315 ... 46561 46562 46563] \n",
-      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n",
       "\t\tTraining : 0 -- Start: 08/10/2022, 00:03:23 --- End: 08/10/2022, 00:03:58\n",
       "\t\tValidation: 0 -- Start: 08/10/2022, 00:03:58---End: 08/10/2022, 00:04:04\n",
       "\tFold: 1\n",
@@ -2699,13 +2693,7 @@
       "\tFold: 0\n",
       "\tTRAIN: [ 9313  9314  9315 ... 46561 46562 46563] \n",
       "\tTEST: [   0    1    2 ... 9310 9311 9312]\n",
-      "\t\tTraining : 0 -- Start: 08/10/2022, 02:14:56 --- End: 08/10/2022, 02:18:01\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\t\tTraining : 0 -- Start: 08/10/2022, 02:14:56 --- End: 08/10/2022, 02:18:01\n",
       "\t\tValidation: 0 -- Start: 08/10/2022, 02:18:01---End: 08/10/2022, 02:18:12\n",
       "\tFold: 1\n",
       "\tTRAIN: [    0     1     2 ... 46561 46562 46563] \n",
@@ -3346,7 +3334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "0c11d143",
    "metadata": {},
    "outputs": [
@@ -20203,12 +20191,14 @@
        "      'support': 9312}}}}}}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pickle\n",
+    "path = 'svm_SVC_AF.pkl'\n",
     "with open(path, 'rb') as f:\n",
     "    loaded_dict = pickle.load(f)\n",
     "loaded_dict"
