--- a/Experiment/Traditional Machine Learning/Supervised Learning/Random Forest/Random Forest - All Feature.ipynb
+++ b/Experiment/Traditional Machine Learning/Supervised Learning/Random Forest/Random Forest - All Feature.ipynb
@@ -2357,13 +2357,7 @@
       "Traning Case: 38\n",
       "\tFold: 0\n",
       "\tTRAIN: [ 9313  9314  9315 ... 46561 46562 46563] \n",
-      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n",
       "\t\tTraining : 0 -- Start: 08/06/2022, 18:50:32 --- End: 08/06/2022, 18:50:34\n",
       "\t\tValidation: 0 -- Start: 08/06/2022, 18:50:34---End: 08/06/2022, 18:50:34\n",
       "\tFold: 1\n",
@@ -2907,13 +2901,7 @@
       "Traning Case: 57\n",
       "\tFold: 0\n",
       "\tTRAIN: [ 9313  9314  9315 ... 46561 46562 46563] \n",
-      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n",
       "\t\tTraining : 0 -- Start: 08/06/2022, 19:04:32 --- End: 08/06/2022, 19:04:36\n",
       "\t\tValidation: 0 -- Start: 08/06/2022, 19:04:36---End: 08/06/2022, 19:04:36\n",
       "\tFold: 1\n",
@@ -3457,13 +3445,7 @@
       "Traning Case: 76\n",
       "\tFold: 0\n",
       "\tTRAIN: [ 9313  9314  9315 ... 46561 46562 46563] \n",
-      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n",
       "\t\tTraining : 0 -- Start: 08/06/2022, 19:31:07 --- End: 08/06/2022, 19:31:12\n",
       "\t\tValidation: 0 -- Start: 08/06/2022, 19:31:12---End: 08/06/2022, 19:31:12\n",
       "\tFold: 1\n",
@@ -4007,13 +3989,7 @@
       "Traning Case: 95\n",
       "\tFold: 0\n",
       "\tTRAIN: [ 9313  9314  9315 ... 46561 46562 46563] \n",
-      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n",
       "\t\tTraining : 0 -- Start: 08/06/2022, 19:57:44 --- End: 08/06/2022, 19:57:48\n",
       "\t\tValidation: 0 -- Start: 08/06/2022, 19:57:48---End: 08/06/2022, 19:57:48\n",
       "\tFold: 1\n",
@@ -4370,13 +4346,7 @@
       "\t\tValidation: 2 -- Start: 08/06/2022, 20:20:42---End: 08/06/2022, 20:20:42\n",
       "\tFold: 3\n",
       "\tTRAIN: [    0     1     2 ... 46561 46562 46563] \n",
-      "\tTEST: [27939 27940 27941 ... 37249 37250 37251]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [27939 27940 27941 ... 37249 37250 37251]\n",
       "\t\tTraining : 3 -- Start: 08/06/2022, 20:20:42 --- End: 08/06/2022, 20:21:31\n",
       "\t\tValidation: 3 -- Start: 08/06/2022, 20:21:31---End: 08/06/2022, 20:21:32\n",
       "\tFold: 4\n",
@@ -4731,13 +4701,7 @@
       "Traning Case: 120\n",
       "\tFold: 0\n",
       "\tTRAIN: [ 9313  9314  9315 ... 46561 46562 46563] \n",
-      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n",
       "\t\tTraining : 0 -- Start: 08/06/2022, 20:26:53 --- End: 08/06/2022, 20:27:47\n",
       "\t\tValidation: 0 -- Start: 08/06/2022, 20:27:47---End: 08/06/2022, 20:27:47\n",
       "\tFold: 1\n",
@@ -5089,13 +5053,7 @@
       "\t\tValidation: 1 -- Start: 08/06/2022, 21:04:08---End: 08/06/2022, 21:04:08\n",
       "\tFold: 2\n",
       "\tTRAIN: [    0     1     2 ... 46561 46562 46563] \n",
-      "\tTEST: [18626 18627 18628 ... 27936 27937 27938]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [18626 18627 18628 ... 27936 27937 27938]\n",
       "\t\tTraining : 2 -- Start: 08/06/2022, 21:04:08 --- End: 08/06/2022, 21:04:13\n",
       "\t\tValidation: 2 -- Start: 08/06/2022, 21:04:13---End: 08/06/2022, 21:04:13\n",
       "\tFold: 3\n",
@@ -5447,13 +5405,7 @@
       "\t\tValidation: 3 -- Start: 08/06/2022, 21:40:46---End: 08/06/2022, 21:40:46\n",
       "\tFold: 4\n",
       "\tTRAIN: [    0     1     2 ... 37249 37250 37251] \n",
-      "\tTEST: [37252 37253 37254 ... 46561 46562 46563]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [37252 37253 37254 ... 46561 46562 46563]\n",
       "\t\tTraining : 4 -- Start: 08/06/2022, 21:40:46 --- End: 08/06/2022, 21:40:53\n",
       "\t\tValidation: 4 -- Start: 08/06/2022, 21:40:53---End: 08/06/2022, 21:40:53\n",
       "\n",
@@ -5808,13 +5760,7 @@
       "\t\tValidation: 0 -- Start: 08/06/2022, 21:52:07---End: 08/06/2022, 21:52:07\n",
       "\tFold: 1\n",
       "\tTRAIN: [    0     1     2 ... 46561 46562 46563] \n",
-      "\tTEST: [ 9313  9314  9315 ... 18623 18624 18625]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [ 9313  9314  9315 ... 18623 18624 18625]\n",
       "\t\tTraining : 1 -- Start: 08/06/2022, 21:52:07 --- End: 08/06/2022, 21:53:09\n",
       "\t\tValidation: 1 -- Start: 08/06/2022, 21:53:09---End: 08/06/2022, 21:53:09\n",
       "\tFold: 2\n",
@@ -6166,13 +6112,7 @@
       "\t\tValidation: 2 -- Start: 08/06/2022, 22:24:04---End: 08/06/2022, 22:24:04\n",
       "\tFold: 3\n",
       "\tTRAIN: [    0     1     2 ... 46561 46562 46563] \n",
-      "\tTEST: [27939 27940 27941 ... 37249 37250 37251]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [27939 27940 27941 ... 37249 37250 37251]\n",
       "\t\tTraining : 3 -- Start: 08/06/2022, 22:24:04 --- End: 08/06/2022, 22:24:09\n",
       "\t\tValidation: 3 -- Start: 08/06/2022, 22:24:09---End: 08/06/2022, 22:24:09\n",
       "\tFold: 4\n",
@@ -6527,13 +6467,7 @@
       "Traning Case: 182\n",
       "\tFold: 0\n",
       "\tTRAIN: [ 9313  9314  9315 ... 46561 46562 46563] \n",
-      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [   0    1    2 ... 9310 9311 9312]\n",
       "\t\tTraining : 0 -- Start: 08/06/2022, 23:12:38 --- End: 08/06/2022, 23:12:46\n",
       "\t\tValidation: 0 -- Start: 08/06/2022, 23:12:47---End: 08/06/2022, 23:12:47\n",
       "\tFold: 1\n",
@@ -6885,13 +6819,7 @@
       "\t\tValidation: 1 -- Start: 08/06/2022, 23:36:04---End: 08/06/2022, 23:36:04\n",
       "\tFold: 2\n",
       "\tTRAIN: [    0     1     2 ... 46561 46562 46563] \n",
-      "\tTEST: [18626 18627 18628 ... 27936 27937 27938]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [18626 18627 18628 ... 27936 27937 27938]\n",
       "\t\tTraining : 2 -- Start: 08/06/2022, 23:36:04 --- End: 08/06/2022, 23:37:35\n",
       "\t\tValidation: 2 -- Start: 08/06/2022, 23:37:35---End: 08/06/2022, 23:37:36\n",
       "\tFold: 3\n",
@@ -7243,13 +7171,7 @@
       "\t\tValidation: 3 -- Start: 08/07/2022, 00:09:00---End: 08/07/2022, 00:09:00\n",
       "\tFold: 4\n",
       "\tTRAIN: [    0     1     2 ... 37249 37250 37251] \n",
-      "\tTEST: [37252 37253 37254 ... 46561 46562 46563]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\tTEST: [37252 37253 37254 ... 46561 46562 46563]\n",
       "\t\tTraining : 4 -- Start: 08/07/2022, 00:09:00 --- End: 08/07/2022, 00:09:04\n",
       "\t\tValidation: 4 -- Start: 08/07/2022, 00:09:04---End: 08/07/2022, 00:09:04\n",
       "\n",
